--- a/exercises/ex08/analysis.ipynb
+++ b/exercises/ex08/analysis.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Analysis for Continuous Improvement\n",
     "\n",
-    "Author Name: \n",
+    "Author Name: Mia Keller\n",
     "\n",
-    "9-digit PID: \n",
+    "9-digit PID: 730389267\n",
     "\n",
     "Continuous Improvement embraces a belief there is _always room to make things better_. It is a mindset and process we value and practice in this course. In this assignment, you are able to practice continuous improvement and contribute to the design ideas of the course.\n",
     "\n",
@@ -29,11 +29,11 @@
    "source": [
     "### Part 1. Creative Ideation\n",
     "\n",
-    "1. \n",
-    "2. \n",
-    "3. \n",
-    "4. \n",
-    "5. "
+    "1. COMP110 should include more review material for quizzes because students consolidate class material through them.\n",
+    "2. COMP110 should offer optional beginner review material because students who have never coded before are finding this class difficult.\n",
+    "3. COMP110 should ease the pace of the course because the majority of students are not computer science majors and need this class for another reason and need to focus on their other endeavors.\n",
+    "4. COMP110 should require photo proof of students' notes because students who keep their own notes are more likely to do better in the course.\n",
+    "5. COMP110 should increase the amount of time per coding assignment because students already spend a lot of time on their computer doing work, damaging their mental health."
    ]
   },
   {
@@ -53,9 +53,9 @@
    "source": [
     "### Part 2. Identifying Missing Data\n",
     "\n",
-    "1. Idea without sufficient data to analyze:\n",
+    "1. Idea without sufficient data to analyze: The idea of easing the pace of the course for those who are not solely interested in computer science lacks data because although we may know whether students find the course difficult, we have no data on whether or not they enjoy spending time working on projects, or how long they work on each project for. \n",
     "\n",
-    "2. Suggestion for how to collect data to support this idea in the future: "
+    "2. Suggestion for how to collect data to support this idea in the future: A question could be asked to discover how much time students are spending working on assignments and whether or not this class is negatively affecting their performance in others. "
    ]
   },
   {
@@ -75,9 +75,9 @@
    "source": [
     "### Part 3. Choosing Your Analysis\n",
     "\n",
-    "1. Idea to analyze with available data:\n",
+    "1. Idea to analyze with available data: COMP110 should offer beginner review material because students who have never coded before are finding this class difficult.\n",
     "\n",
-    "2. This idea is more valuable than the others brainstormed because: \n"
+    "2. This idea is more valuable than the others brainstormed because: I believe this idea will have the largest impact on students' performance in this class. It is of value knowing the relationship between previous coding experience and students' success in this course and their view of the course. Offering supplemental and optional videos for students who need more review and practice, especially nailing down concepts in the beginning, will greatly boost their knowledge of computer science and help them master more difficult concepts as the course progresses.\n"
    ]
   },
   {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,11 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: You complete the code blocks from here forward!"
+    "from data_utils import read_csv_rows, column_values, columnar, head, select, concat, count"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
