finished getting all non comp sci majors

--- a/exercises/ex08/analysis.ipynb
+++ b/exercises/ex08/analysis.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,16 +132,115 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, ... (you take it from here and add additional code and markdown cells to read in the CSV file and process it as needed)"
+    "Next, we import the data from the surveys. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "SURVEY_DATA_CSV_FILE_PATH: str = \"../../data/survey.csv\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To perform our analysis, we will be looking at students who are not computer science majors (`comp_major = \"No\"`). We will also assess whether they have prior experience to coding (`prior_exp`), completed an AP computer science course (`ap_principles`, `ap_a`), a different computer science course (`other_comp`), or had prior experience teaching themselves coding (`prior_time`). \n",
+    "\n",
+    "To gauge their perception of the course, we will look at how they find the pace and difficulty of the class, as well as gauge their understanding of the material (`pace`, `difficulty`, `understanding`.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Collecting Data\n",
+    "We first need to obtain these values from students who are not computer science majors. To do so, we will first convert our csv file to a row-oriented table.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_rows: list[dict[str, str]] = read_csv_rows(SURVEY_DATA_CSV_FILE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, we will need to narrow down our data to those participants who are not computer science majors or minors. We do this by testing if the key `\"comp_major\"` is equal to `\"No\"`. If this is true, we append this row to a new, final table of data, containing the information of only those who are not computer science majors. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tabulate import tabulate\n",
+    "\n",
+    "final_data: list[dict[str, str]] = []\n",
+    "\n",
+    "for subject in data_rows:\n",
+    "    if subject[\"comp_major\"] == \"No\":\n",
+    "        final_data.append(subject)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To ensure that this process has worked, lets tabulate our data into a table that is easier to read. We will use the `tabulate` function imported from tabulate. First, we have to transform our row-oriented table into a column-oriented table, however. We will import the `columnar` function from `data_utils`.\n",
+    "\n",
+    "Then, to select the columns we are focusing on (`\"row\"`, `\"comp_major\"`, `\"prior_exp\"`, `\"ap_principles\"`, `\"ap_a\"`, `\"other_comp\"`, `\"prior_time\"`, `\"pace\"`, `\"difficulty\"`, `\"understanding\"`), we will use the `select` function imported from `data_utils` with these headings as arguments.\n",
+    "\n",
+    "We can then use the `tabulate` function to check if the first 5 values have correct `comp_major` values of `\"No\"`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead>\n",
+       "<tr><th style=\"text-align: right;\">  row</th><th>comp_major  </th><th>prior_exp                   </th><th>ap_principles  </th><th>ap_a  </th><th>other_comp        </th><th>prior_time                  </th><th style=\"text-align: right;\">  pace</th><th style=\"text-align: right;\">  difficulty</th><th style=\"text-align: right;\">  understanding</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "<tr><td style=\"text-align: right;\">    0</td><td>No          </td><td>7-12 months                 </td><td>No             </td><td>No    </td><td>UNC               </td><td>1 month or so               </td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">           1</td><td style=\"text-align: right;\">              7</td></tr>\n",
+       "<tr><td style=\"text-align: right;\">    1</td><td>No          </td><td>None to less than one month!</td><td>               </td><td>      </td><td>                  </td><td>                            </td><td style=\"text-align: right;\">     6</td><td style=\"text-align: right;\">           6</td><td style=\"text-align: right;\">              3</td></tr>\n",
+       "<tr><td style=\"text-align: right;\">    9</td><td>No          </td><td>None to less than one month!</td><td>               </td><td>      </td><td>                  </td><td>                            </td><td style=\"text-align: right;\">     7</td><td style=\"text-align: right;\">           4</td><td style=\"text-align: right;\">              6</td></tr>\n",
+       "<tr><td style=\"text-align: right;\">   12</td><td>No          </td><td>None to less than one month!</td><td>               </td><td>      </td><td>                  </td><td>                            </td><td style=\"text-align: right;\">     5</td><td style=\"text-align: right;\">           5</td><td style=\"text-align: right;\">              4</td></tr>\n",
+       "<tr><td style=\"text-align: right;\">   13</td><td>No          </td><td>2-6 months                  </td><td>No             </td><td>Yes   </td><td>Only AP Comp Sci A</td><td>None to less than one month!</td><td style=\"text-align: right;\">     4</td><td style=\"text-align: right;\">           3</td><td style=\"text-align: right;\">              7</td></tr>\n",
+       "</tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "'<table>\\n<thead>\\n<tr><th style=\"text-align: right;\">  row</th><th>comp_major  </th><th>prior_exp                   </th><th>ap_principles  </th><th>ap_a  </th><th>other_comp        </th><th>prior_time                  </th><th style=\"text-align: right;\">  pace</th><th style=\"text-align: right;\">  difficulty</th><th style=\"text-align: right;\">  understanding</th></tr>\\n</thead>\\n<tbody>\\n<tr><td style=\"text-align: right;\">    0</td><td>No          </td><td>7-12 months                 </td><td>No             </td><td>No    </td><td>UNC               </td><td>1 month or so               </td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">           1</td><td style=\"text-align: right;\">              7</td></tr>\\n<tr><td style=\"text-align: right;\">    1</td><td>No          </td><td>None to less than one month!</td><td>               </td><td>      </td><td>                  </td><td>                            </td><td style=\"text-align: right;\">     6</td><td style=\"text-align: right;\">           6</td><td style=\"text-align: right;\">              3</td></tr>\\n<tr><td style=\"text-align: right;\">    9</td><td>No          </td><td>None to less than one month!</td><td>               </td><td>      </td><td>                  </td><td>                            </td><td style=\"text-align: right;\">     7</td><td style=\"text-align: right;\">           4</td><td style=\"text-align: right;\">              6</td></tr>\\n<tr><td style=\"text-align: right;\">   12</td><td>No          </td><td>None to less than one month!</td><td>               </td><td>      </td><td>                  </td><td>                            </td><td style=\"text-align: right;\">     5</td><td style=\"text-align: right;\">           5</td><td style=\"text-align: right;\">              4</td></tr>\\n<tr><td style=\"text-align: right;\">   13</td><td>No          </td><td>2-6 months                  </td><td>No             </td><td>Yes   </td><td>Only AP Comp Sci A</td><td>None to less than one month!</td><td style=\"text-align: right;\">     4</td><td style=\"text-align: right;\">           3</td><td style=\"text-align: right;\">              7</td></tr>\\n</tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tabulate import tabulate\n",
+    "\n",
+    "data_cols: dict[str, list[str]] = columnar(final_data)\n",
+    "\n",
+    "selected_data: dict[str, list[str]] = select(data_cols, [\"row\", \"comp_major\", \"prior_exp\", \"ap_principles\", \"ap_a\", \"other_comp\", \"prior_time\", \"pace\", \"difficulty\", \"understanding\"])\n",
+    "\n",
+    "tabulate(head(selected_data, 5), selected_data.keys(), \"html\")"
    ]
   },
   {
