--- a/exercises/ex08/analysis.ipynb
+++ b/exercises/ex08/analysis.ipynb
@@ -689,7 +689,16 @@
     "\n",
     "We want to find a way to help students who have no prior coding experience \"catch up\" on material that other students may have more experience with in the past. One idea is to implement optional videos or tutoring sessions that cover the basics of python more in-depth, allowing students to master these basics before moving onto harder concepts.\n",
     "\n",
-    "To assess whether these measures would be effective, we can analyze the effectiveness of tutoring (`tutoring_effective`), office hours (`oh_effective`) and lesson videos (`ls_effective`). Specifically, we can see if students who are finding the pace and difficulty of the class are benefitting from these resources."
+    "To assess whether these measures would be effective, we can analyze the effectiveness of tutoring (`tutoring_effective`), office hours (`oh_effective`) and lesson videos (`ls_effective`). Specifically, we can see if non-computer science major students with no prior coding epxerience are finding the pace and difficulty of the class to be hard are benefitting from these resources."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
