--- a/exercises/ex08/analysis.ipynb
+++ b/exercises/ex08/analysis.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "'<table>\\n<thead>\\n<tr><th style=\"text-align: right;\">  row</th><th>comp_major  </th><th>prior_exp                   </th><th>ap_principles  </th><th>ap_a  </th><th>other_comp        </th><th>prior_time                  </th><th style=\"text-align: right;\">  pace</th><th style=\"text-align: right;\">  difficulty</th><th style=\"text-align: right;\">  understanding</th></tr>\\n</thead>\\n<tbody>\\n<tr><td style=\"text-align: right;\">    0</td><td>No          </td><td>7-12 months                 </td><td>No             </td><td>No    </td><td>UNC               </td><td>1 month or so               </td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">           1</td><td style=\"text-align: right;\">              7</td></tr>\\n<tr><td style=\"text-align: right;\">    1</td><td>No          </td><td>None to less than one month!</td><td>               </td><td>      </td><td>                  </td><td>                            </td><td style=\"text-align: right;\">     6</td><td style=\"text-align: right;\">           6</td><td style=\"text-align: right;\">              3</td></tr>\\n<tr><td style=\"text-align: right;\">    9</td><td>No          </td><td>None to less than one month!</td><td>               </td><td>      </td><td>                  </td><td>                            </td><td style=\"text-align: right;\">     7</td><td style=\"text-align: right;\">           4</td><td style=\"text-align: right;\">              6</td></tr>\\n<tr><td style=\"text-align: right;\">   12</td><td>No          </td><td>None to less than one month!</td><td>               </td><td>      </td><td>                  </td><td>                            </td><td style=\"text-align: right;\">     5</td><td style=\"text-align: right;\">           5</td><td style=\"text-align: right;\">              4</td></tr>\\n<tr><td style=\"text-align: right;\">   13</td><td>No          </td><td>2-6 months                  </td><td>No             </td><td>Yes   </td><td>Only AP Comp Sci A</td><td>None to less than one month!</td><td style=\"text-align: right;\">     4</td><td style=\"text-align: right;\">           3</td><td style=\"text-align: right;\">              7</td></tr>\\n</tbody>\\n</table>'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "'<table>\\n<thead>\\n<tr><th style=\"text-align: right;\">  row</th><th>comp_major  </th><th>prior_exp                   </th><th style=\"text-align: right;\">  pace</th><th style=\"text-align: right;\">  difficulty</th><th style=\"text-align: right;\">  understanding</th></tr>\\n</thead>\\n<tbody>\\n<tr><td style=\"text-align: right;\">    1</td><td>No          </td><td>None to less than one month!</td><td style=\"text-align: right;\">     6</td><td style=\"text-align: right;\">           6</td><td style=\"text-align: right;\">              3</td></tr>\\n<tr><td style=\"text-align: right;\">    9</td><td>No          </td><td>None to less than one month!</td><td style=\"text-align: right;\">     7</td><td style=\"text-align: right;\">           4</td><td style=\"text-align: right;\">              6</td></tr>\\n<tr><td style=\"text-align: right;\">   12</td><td>No          </td><td>None to less than one month!</td><td style=\"text-align: right;\">     5</td><td style=\"text-align: right;\">           5</td><td style=\"text-align: right;\">              4</td></tr>\\n<tr><td style=\"text-align: right;\">   14</td><td>No          </td><td>None to less than one month!</td><td style=\"text-align: right;\">     4</td><td style=\"text-align: right;\">           4</td><td style=\"text-align: right;\">              5</td></tr>\\n<tr><td style=\"text-align: right;\">   16</td><td>No          </td><td>None to less than one month!</td><td style=\"text-align: right;\">     6</td><td style=\"text-align: right;\">           7</td><td style=\"text-align: right;\">              2</td></tr>\\n</tbody>\\n</table>'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "Text(0.5, 1.0, 'Student Understandings of COMP110 Material')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "'<table>\\n<thead>\\n<tr><th style=\"text-align: right;\">  row</th><th>comp_major  </th><th>prior_exp  </th><th style=\"text-align: right;\">  pace</th><th style=\"text-align: right;\">  difficulty</th><th style=\"text-align: right;\">  understanding</th></tr>\\n</thead>\\n<tbody>\\n<tr><td style=\"text-align: right;\">    0</td><td>No          </td><td>7-12 months</td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">           1</td><td style=\"text-align: right;\">              7</td></tr>\\n<tr><td style=\"text-align: right;\">   13</td><td>No          </td><td>2-6 months </td><td style=\"text-align: right;\">     4</td><td style=\"text-align: right;\">           3</td><td style=\"text-align: right;\">              7</td></tr>\\n<tr><td style=\"text-align: right;\">   15</td><td>No          </td><td>2-6 months </td><td style=\"text-align: right;\">     5</td><td style=\"text-align: right;\">           7</td><td style=\"text-align: right;\">              3</td></tr>\\n<tr><td style=\"text-align: right;\">   17</td><td>No          </td><td>1-2 years  </td><td style=\"text-align: right;\">     4</td><td style=\"text-align: right;\">           4</td><td style=\"text-align: right;\">              6</td></tr>\\n<tr><td style=\"text-align: right;\">   22</td><td>No          </td><td>2-6 months </td><td style=\"text-align: right;\">     5</td><td style=\"text-align: right;\">           5</td><td style=\"text-align: right;\">              5</td></tr>\\n</tbody>\\n</table>'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -689,16 +689,36 @@
     "\n",
     "We want to find a way to help students who have no prior coding experience \"catch up\" on material that other students may have more experience with in the past. One idea is to implement optional videos or tutoring sessions that cover the basics of python more in-depth, allowing students to master these basics before moving onto harder concepts.\n",
     "\n",
-    "To assess whether these measures would be effective, we can analyze the effectiveness of tutoring (`tutoring_effective`), office hours (`oh_effective`) and lesson videos (`ls_effective`). Specifically, we can see if non-computer science major students with no prior coding epxerience are finding the pace and difficulty of the class to be hard are benefitting from these resources."
+    "To assess whether these measures would be effective, we can analyze the effectiveness of tutoring (`tutoring_effective`), office hours (`oh_effective`) and lesson videos (`ls_effective`). Specifically, we can see if non-computer science major students with no prior coding epxerience who are finding the pace and difficulty of the class to be hard are benefitting from these resources."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'oh_effective'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/fp/z3s_7qqd79ddmfp0h4j8wt000000gn/T/ipykernel_29975/4181293917.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mthreshold_int_no_experience_selected_2\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mthreshold\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint_no_experience_selected_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"pace\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"difficulty\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"understanding\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0moh_effectiveness\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcount_ints\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthreshold_int_no_experience_selected_2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"oh_effective\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moh_effectiveness\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'oh_effective'"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "from data_utils import make_int, threshold, count_ints\n",
+    "no_experience_selected_2: dict[str, list[str]] = select(no_experience_cols, [\"pace\", \"difficulty\", \"understanding\", \"oh_effective\", \"tutoring_effective\", \"ls_effective\"])\n",
+    "\n",
+    "int_no_experience_selected_2: dict[str, list[int]] = make_int(no_experience_selected_2)\n",
+    "\n",
+    "threshold_int_no_experience_selected_2: dict[str, list[int]] = threshold(int_no_experience_selected_2, 4, [\"pace\", \"difficulty\", \"understanding\"])\n",
+    "\n",
+    "oh_effectiveness: dict[str, int] = count_ints(threshold_int_no_experience_selected_2[\"oh_effective\"])\n",
+    "print(oh_effectiveness)"
    ]
   },
   {
