now finished ls27

--- a/lessons/ls27_filter.ipynb
+++ b/lessons/ls27_filter.ipynb
@@ -189,6 +189,61 @@
     "rain_on_cold_days: list[float] = masked(col_data[\"rain\"], cold_days_mask)\n",
     "print(mean(rain_on_cold_days))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lesson Gradescope Questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "less_than(col_data[\"high\"], 65)\n",
+    "masked([1, 2, 3], [True, False, True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def not_mask(mask: list[bool]) -> list[bool]:\n",
+    "    result: list[bool] = []\n",
+    "    for item in mask:\n",
+    "        result.append(not item)\n",
+    "    return result\n",
+    "\n",
+    "mask_a: list[bool] = less_than(col_data[\"high\"], 80)\n",
+    "mask_b: list[bool] = not_mask(mask_a)\n",
+    "\n",
+    "values: list[float] = masked(col_data[\"low\"], mask_b)\n",
+    "print(mean(values))"
+   ]
   }
  ],
  "metadata": {
